force-app/main/default/objects/Tarifa__c/fields/Tipo_Tarifa__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Tarifa__c</fullName>
    <label>Tipo Tarifa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Importación</fullName>
            </value>
            <value>
                <fullName>Exportación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>