force-app/main/default/objects/Tarifa__c/fields/Vigencia_Desde__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_Desde__c</fullName>
    <label>Vigencia Desde</label>
    <type>Date</type>
</CustomField>