force-app/main/default/objects/Tarifa__c/fields/Vigencia_Hasta__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_Hasta__c</fullName>
    <label>Vigencia Hasta</label>
    <type>Date</type>
</CustomField>